--- a/style.scss
+++ b/style.scss
@@ -1,10 +1,10 @@
-$primary: #529b56;
-$secondary: #dcffd3;
-$input: rgb(114, 141, 123);
-$third: rgb(36, 87, 59);
-$button: #63bb68;
+$primary: #6ac7c2;
+$secondary: #d3f3ff;
+$input: rgb(101, 155, 152);
+$third: rgb(63, 143, 153);
+$button: #63bbb7;
 $shadow: 2px 2px 30px rgba(0, 0, 0, 0.267);
-$fontColor: #36753a;
+$fontColor: #367572;
 
 body {
     font-family: 'Gotham';
