--- a/style.scss
+++ b/style.scss
@@ -1,8 +1,8 @@
-$primary: #6ac7c2;
+$primary: #66cada;
 $secondary: #d3f3ff;
-$input: rgb(101, 155, 152);
-$third: rgb(63, 143, 153);
-$button: #63bbb7;
+$input: #66cada;
+$third: #66cada;
+$button: #66cada;
 $shadow: 2px 2px 30px rgba(0, 0, 0, 0.267);
 $fontColor: #367572;
 
