Updates to messages and syntax/display fixes for New Cold RR

--- a/style.css
+++ b/style.css
@@ -1272,3 +1272,11 @@ div.ql-container.ql-snow {
 .ql-snow .ql-stroke {
   stroke: #3b5998 !important;
 }
+
+.ql-editor ul > li::before {
+  content: '' !important;
+}
+
+.ql-editor ul > li::before {
+  content: '' !important;
+}
