--- a/style.css
+++ b/style.css
@@ -1303,8 +1303,39 @@ div.ql-container.ql-snow {
 
 ul li {
   padding: none;
-  margin: none;=[]p
+  margin: none;
 }
 
+.bold-red {
+  color: red;
+  font-weight: bold;
+}
 
+.flex-row {
+  display: flex;
+  flex-direction: row;
+}
+
+.flex-col {
+  display: flex;
+  flex-direction: column;
+}
+
+.number-icon-custom {
+  width: 18px;
+  height: 18px;
+  margin-right: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  background: #274b75;
+  color: white;
+  font-weight: bold;
+}
+
+.align-items-center {
+  display: flex;
+  align-items: center;
+}
 
